app/assets/stylesheets/pages/_home.scss
html {
  scroll-behavior: smooth;
}

.nav-bar {
  position: -webkit-sticky;
	position: fixed;
	top: 0;
  z-index: 3;
  background-color: white;
  font-family: 'EB Garamond', 'serif';
}

.links {
  display: flex;
  flex-direction: row;
}

.ed {
  border-right: 1px solid black;
}

.ed, .info {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 0 solid black;
  width: 50vw;
 justify-content: center;
 display: flex;
 padding: 0.6rem;
 text-decoration: none;
 color: black;
 font-size: 1.1em;
}

.ed:hover, .info:hover {
  color: blue;
}

.loop-holder {
  display: flex;
  white-space: nowrap;
  border-bottom: 1px solid black;
}
.loop-holder__text {
    animation: textLoop 20s linear infinite;
    font-size: 0.9em;
    padding-right: 0.15em;
}

@keyframes textLoop {
    0% {
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
    }
    100% {
        -webkit-transform: translate(-100%, 0);
        transform: translate(-100%, 0);
    }
}

.carrousel {
  height: 100vh;
  background-color: rgba(17, 0, 255, 0.171);
  border-bottom: 1px solid black;
  z-index: 5;
}


.down {
  width: 100%;
  height: 70px;
}

a:hover {
  fill:blue;
}

.helloTop, .myNameTop, .edouardTop, .iAmTop, .basedTop, .enquiriesTop, .sendTop, .hereTop {
  -webkit-tap-highlight-color:transparent;
 }

.stretchTwo, .stretchThreeTwo, .stretchOne, .stretchFiveTwo, .stretchSixTwo, .stretchNineTwo, .stretchTenTwo, .stretchElevenTwo, .stretchTwelveTwo, .stretchEightThree, .stretchNineThree, .stretchThirtheenThree {
  stroke-width: 7.6px;
}

.stretchSix, .stretchLast, .stretchElevenThree, .stretchFourLast, .stretchFourtheenThree {
  stroke-width: 7.8px;
}

.stretchTwoThree, .stretchFourThree, .stretchFiveThree, .stretchTenThree, .stretchTwelveThree {
  stroke-width: 7.9px;
}
.stretchThree {
  stroke-width: 8px;
}

.stretchFour, .stretchFive {
  stroke-width: 7.8px;
}

.stretchFourTwo {
  stroke-width: 7.4px;
}

.stretchEightTwo, .stretchOneFive {
  stroke-width: 7.2px;
}

.stretchThirtheenTwo, .stretchSevenTwo {
  stroke-width: 7.7px;
}

.stretchTwoFive {
  stroke-width: 8.7px;
}

svg#Layer_2 {
  position: relative;
  top: -54rem;
  left: 0;
}

svg#Layer_3 {
  position: relative;
  top: -94rem;
  left:0;
}

svg#Layer_4 {
  position: relative;
  top: -143rem;
  left: 0;
}

svg#Layer_5 {
  position: relative;
  top: -191rem;
  left: 0;
}

svg#Layer_6 {
  position: relative;
  top: -240rem;
  left: 0;
}

svg#Layer_7 {
  position: relative;
  top: -289rem;
  left: 0;
}

svg#Layer_8 {
  position: relative;
  top: -337rem;
  left: 0;
}

.wholeHere:hover line {
  stroke: blue;
}

.back {
  position: relative;
  top: -310rem;
  display: flex;
  justify-content: center;
}

